Primera version Portafolio

--- a/index.html
+++ b/index.html
@@ -7,8 +7,96 @@
 
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+  <link rel="stylesheet" href="css/grid-system.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/utilities.css">
 
 </head>
+
 <body>
+	<!--***************************INICIO Portafolio****************************-->
+	<section id="portfolio">
+		<div class="container-fluid back-gray pd-row-porta">
+			<!--Titulo y frase-->
+			<div class="row pd-row-porta">
+				<div class="col-12 text-center">
+					<h2 class="letra-h-porta">Portfolio</h2>
+					<p class="letra-frase pd-row-porta">Mis principales Proyectos. Producto de la creatividad e inspiracion.</p>
+				</div>
+			</div>
+			<!--Menu-->
+			<div class="row pd-row-porta">
+				<div class="col-12 text-center">
+					<ul class="menu-porta">
+						<li class="list-port"><a href="#portfolio" class="color-porta">Show All</a></li>
+						<li class="list-port"><a href="#identity" class="color-porta">Identity</a></li>
+						<li class="list-port"><a href="#graphic" class="color-porta">Web Design</a></li>
+						<li class="list-port"><a href="#graphic" class="color-porta">Graphic</a></li>
+						<li class="list-port"><a href="#logo" class="color-porta">Logo</a></li>
+					</ul>
+				</div>
+			</div>
+			<!--Primer renglon portafolio-->
+			<div class="row pd-row-porta" id="graphic">
+				<div class="col-6 text-center">
+					<div class="box-porta float-right">
+						<img src="img/grid/1a.jpg" alt="proyecto" class="img-porta">
+						<h3>Dashboard</h3>
+						<p class="letra-frase">Web Design / Graphic</p>
+					</div>
+				</div>
+				<div class="col-6 text-center">
+					<div class="box-porta">
+						<img src="img/grid/2a.jpg" alt="proyecto" class="img-porta">
+						<h3>Workd Clock Widge</h3>
+						<p class="letra-frase">Logo / Web Design</p>
+					</div>
+				</div>
+			</div>
+			<!--Segundo renglon portafolio-->
+			<div class="row pd-row-porta" id="logo">
+				<div class="col-6 text-center">
+					<div class="box-porta float-right">
+						<img src="img/grid/3a.jpg" alt="proyecto" class="img-porta">
+						<h3>To-Do Dashboard</h3>
+						<p class="letra-frase">Graphic / Logo</p>
+					</div>
+				</div>
+				<div class="col-6 text-center">
+					<div class="box-porta">
+						<img src="img/grid/4a.jpg" alt="proyecto" class="img-porta">
+						<h3>Events and More</h3>
+						<p class="letra-frase">Graphic / Logo</p>
+					</div>
+				</div>
+			</div>
+			<!--Tercer renglon portafolio-->
+			<div class="row pd-row-porta" id="identity">
+				<div class="col-6 text-center">
+					<div class="box-porta float-right">
+						<img src="img/grid/5a.jpg" alt="proyecto" class="img-porta">
+						<h3>WhereTO App</h3>
+						<p class="letra-frase">Web Design / Identity</p>
+					</div>
+				</div>
+				<div class="col-6 text-center">
+					<div class="box-porta">
+						<img src="img/grid/6a.jpg" alt="proyecto" class="img-porta">
+						<h3>Ski * Buddy</h3>
+						<p class="letra-frase">Identity / Web Design</p>
+					</div>
+				</div>
+			</div>
+			<!--BOTON-->
+			<div class="row">
+				<div class="col-12">
+					<button class="btn-porta">Load More</button>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--***************************FIN Portafolio****************************-->
+
 </body>
 </html>
