--- a/index.html
+++ b/index.html
@@ -7,8 +7,76 @@
 
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/common.css">
 
 </head>
 <body>
+	<header><!-- inicia Header -->
+		<div class="container-fluid fondoinicio">		
+			<div class="row">
+				<div class="col-">
+					<p>Aquí va la imagen de EstrellaPrimes</p>
+				</div>
+				<div class="col-10">
+					<nav><!-- inicia Menú -->
+						<ul>
+							<li class="f-40"><a href="#home">Home</a></li>
+							<li class="f-40"><a href="#features">Features</a></li>
+							<li class="f-40"><a href="#portfolio">Portfolio</a></li>
+							<li class="f-40"><a href="#pricing">Pricing</a></li>
+							<li class="f-40"><a href="#contact">Contact</a></li>
+						</ul>
+					</nav><!-- termina Menú -->						
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<h1 class="f-60">Launch Your Business with Primes</h1>
+					<p class="lema">Vivamus commmodo felis quis dui pharetra, ac venenatis magna lacinia. Vestibulum quis dignissim nibh. Duis vitae felis<br>orci.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-6">
+					<button class="button text-white pull-left">Our Portfolio</button>					
+				</div>
+				<div class="col-6"></div>
+					<button class="button text-white pull-right">Learn More</button>
+				</div>
+			</div>
+		</div>	
+	</header><!-- termina Header -->
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-5 lateralizq">
+					<p>Lorem Ipsum</p>
+					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				</div>
+				<div class="col-2 centro">
+					<p>Lorem Ipsum</p>
+					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				</div>
+				<div class="col-5 lateralder">
+					<p>Lorem Ipsum</p>
+					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				</div>			
+			</div>
+			<div class="row">
+				<div class="col-4 lateralizq">
+					<p>Lorem Ipsum</p>
+					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				</div>
+				<div class="col-4 centro">
+					<p>Lorem Ipsum</p>
+					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				</div>
+				<div class="col-4 lateralder">
+					<p>Lorem Ipsum</p>
+					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				</div>			
+			</div>
+		</div>
+	</section>
 </body>
 </html>
