--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/utilities.css">
+  <link rel="stylesheet" href="css/ionicons.min.css">
 
 </head>
 
@@ -96,7 +97,325 @@
 			</div>
 		</div>
 	</section>
-	<!--***************************FIN Portafolio****************************-->
+	<!--***************************FIN Portfolio****************************-->
+	<section>
+		<div class="container-fluid back-price">
+			<div class="row pd-row-price">
+				<div class="col-12 text-center">
+					<p class="letra-price">La inovación al alcance de Todos. No esperes más <br> Llega muy lejos.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 text-center">
+					<button class="btn-price">Call To Action</button>
+				</div>
+			</div>
+		</div>
+		<!--Precio por paquete-->
+		<div class="container-fluid back-pckg pd-row-price3">
+			<div class="row">
+				<div class="col-12 text-center">
+					<h2 class="letra-h-porta">Choose the package</h2>
+					<p class="letra-frase pd-row-porta">Los mejores precios, con la más alta tecnología.</p>
+				</div>
+			</div>
+			<!--PAQUETES-->
+			<div class="row">
+			    <!--Primer paquete de precios-->
+				<div class="col-4 pd-5">
+					<div class="box-price">
+						<div class="row box-titulo">
+							<div class="col-12">
+								<h2>Standard</h2>
+							</div>
+						</div>
+						<div class="row box-precio">
+							<div class="col-12">
+								<p>From $45.99 per month</p>
+							</div>
+						</div>
+						<!--Detalle paquete 1-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Vestibulum est magna</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 2-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Mauris auctor massa libero</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 3-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Praesent magna tortor</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 4-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Cras el fermentum masa</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Boton-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<button class="btn-pack">Purchase</button>
+								<hr class="hr-precio">
+							</div>
+						</div>
+					</div>
+				</div><!--fIN Primer paquete de precios-->
 
+				<!--SEGUNDO paquete de precios-->
+				<div class="col-4 pd-5">
+					<div class="box-price">
+						<div class="row box-premium">
+							<div class="col-12">
+								<h2>Premium</h2>
+							</div>
+						</div>
+						<div class="row box-precio">
+							<div class="col-12">
+								<p>From $75.00 per month</p>
+							</div>
+						</div>
+						<!--Detalle paquete 1-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Vestibulum est magna</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 2-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Mauris auctor massa libero</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 3-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Praesent magna tortor</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 4-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Cras el fermentum masa</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Boton-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<button class="btn-pack">Purchase</button>
+								<hr class="hr-precio">
+							</div>
+						</div>
+					</div>
+				</div><!--fIN segundo paquete de precios-->
+
+				<!--TERCER aquete de precios-->
+				<div class="col-4 pd-5">
+					<div class="box-price">
+						<div class="row box-titulo">
+							<div class="col-12">
+								<h2>Ultimate</h2>
+							</div>
+						</div>
+						<div class="row box-precio">
+							<div class="col-12">
+								<p>From $99.99 per month</p>
+							</div>
+						</div>
+						<!--Detalle paquete 1-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Vestibulum est magna</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 2-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Mauris auctor massa libero</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 3-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Praesent magna tortor</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Detalle paquete 4-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<p>Cras el fermentum masa</p>
+								<hr class="hr-precio">
+							</div>
+						</div>
+						<!--Boton-->
+						<div class="row pd-desc-price">
+							<div class="col-12 text-center">
+								<button class="btn-pack">Purchase</button>
+								<hr class="hr-precio">
+							</div>
+						</div>
+					</div>
+				</div><!--fIN TERCER paquete de precios-->
+			</div>
+		</div>
+	</section>
+	<!--Opinion clientes-->
+	<section>
+		<div class="container pdb-3">
+			<div class="row">
+				<div class="col-12 text-center"">
+					<h2 class="pd-3">What our customers have to say ...</h2>
+					<img src="img/customer.jpg" alt="clienta" class="img-cte">
+					<p class="pd-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
+						Perferendis quae est reprehenderit autem a, doloremque quam adipisci quibusdam error minus,<br> 
+						suscipit unde velit quo ipsam illo facere qui distinctio provident!
+					</p>
+					<h4>- Diana Rosswert</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--Contactanos-->
+	<section>
+		<div class="container-fluid back-contact">
+			<div class="row">
+				<div class="col-12 text-center">
+					<h2 class="letra-h-contact pdt-2">Contact Us</h2>
+					<p class="letra-contact pdt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam obcaecati, quam blanditiis eaque minus</p>
+				</div>
+			</div>
+			<div class="row">
+				<!--Formulario-->
+				<div class="col-6">
+					<!--Titulo-->
+					<div class="row pd-form">
+						<div class="col-12">
+							<h3 class="letra-h3-contact">Send Message</h3>
+						</div>
+					</div>
+					<form action="#">
+						<!--Email-->
+						<div class="row pd-form">
+							<div class="col-12">
+								<input type="text" placeholder="Email" class="width-form back-form">
+							</div>
+						</div>
+						<!--Subject-->
+						<div class="row pd-form">
+							<div class="col-12">
+								<input type="text" placeholder="Subject" class="width-form back-form">
+							</div>
+						</div>
+						<!--Message-->
+						<div class="row pd-form">
+							<div class="col-12">
+								<textarea placeholder="Message" class="back-area"></textarea>
+							</div>
+						</div>
+						<!--Boton-->
+						<div class="row pd-form">
+							<div class="col-12">
+								<button class="btn-contact">Submit</button>
+							</div>
+						</div>
+					</form>
+				</div>
+				<!--Texto-->
+				<div class="col-6">
+					<!--Titulo-->
+					<div class="row">
+						<div class="col-12">
+							<h3 class="letra-h3-contact">About Us</h3>
+						</div>
+					</div>
+					<!--Descripcion-->
+					<div class="row pd-5">
+						<div class="col-12">
+							<p class="letra-address">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum non obcaecati expedita incidunt quisquam explicabo aperiam laboriosam officiis, dolorum porro hic error quod doloribus iste autem tempora deserunt? Nemo, distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed debitis, corporis soluta at optio, nostrum blanditiis, iste non cupiditate placeat officia harum ad. Nesciunt explicabo iste debitis repellat! Nisi, nemo.
+							</p>
+						</div>
+					</div>
+					<!--Direccion-->
+					<div class="row pd-address">
+						<div class="col-12">
+							<h3 class="letra-h3-contact">Address</h3>
+						</div>
+					</div>
+					<div class="row pd-address letra-address"> 
+						<div class="col-12">
+							<p><i class="icon ion-location img-contact"></i> 13 Brant Street, Burlington, Ontario, Canada</p>
+						</div>
+					</div>
+					<div class="row pd-address letra-address">
+						<div class="col-12">
+							<p><i class="icon ion-ios-telephone img-contact"></i>Phone: 0011 222 335 7773</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--Follow us-->
+	<section>
+		<div class="container pd-5">
+			<div class="row pdt-2">
+				<div class="col-12 text-center">
+					<h2>Follow Us</h2>
+				</div>
+			</div>
+			<div class="row pdt-4">
+				<div class="col-12 text-center">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus perspiciatis fugiat voluptatum harum, tenetur voluptates. Aperiam sit officia consequuntur, obcaecati, sed tempore nihil corporis fugiat deleniti quas ipsum dolores et.</p>
+				</div>
+			</div>
+			<!--Redes Sociales-->
+			<div class="row pdt-4">
+				<div class="col-12 text-center">
+					<a href="https://www.facebook.com/" class="sin-dec">
+						<i class="icon ion-social-facebook img-redes" ></i>
+					</a>
+					<a href="https://twitter.com/" class="sin-dec">
+						<i class="icon ion-social-twitter img-redes" ></i>
+					</a>
+					<a href="https://mx.linkedin.com/" class="sin-dec">
+						<i class="icon ion-social-linkedin img-redes" ></i>
+					</a>
+					<a href="https://es.pinterest.com/" class="sin-dec">
+						<i class="icon ion-social-pinterest img-redes" ></i>
+					</a>
+					<a href="https://plus.google.com/up/accounts/upgrade/?continue=https://plus.google.com/" class="sin-dec">
+						<i class="icon ion-social-googleplus img-redes" ></i>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--pie-->
+	<footer>
+		<div class="container-fluid back-pie">
+			<div class="row">
+				<div class="col-12">
+					<p class="text-center">@primes 2015 - laboratoria.la</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
