--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 		</div>
 	</section>
 	<!--***************************FIN Portfolio****************************-->
-	<section>
-		<div class="container-fluid back-price">
+	<!--***************************INICIO Precios****************************-->
+	<section id="pricing" class="back-price">
+		<div class="container-fluid back-price2">
 			<div class="row pd-row-price">
 				<div class="col-12 text-center">
 					<p class="letra-price">La inovación al alcance de Todos. No esperes más <br> Llega muy lejos.</p>
@@ -276,6 +277,7 @@
 			</div>
 		</div>
 	</section>
+	<!--***************************FIN Precios****************************-->
 	<!--Opinion clientes-->
 	<section>
 		<div class="container pdb-3">
@@ -292,9 +294,10 @@
 			</div>
 		</div>
 	</section>
+	<!--***************************INICIO contacto****************************-->
 	<!--Contactanos-->
-	<section>
-		<div class="container-fluid back-contact">
+	<section class="back-contact">
+		<div class="container-fluid back-contact2" id="contact">
 			<div class="row">
 				<div class="col-12 text-center">
 					<h2 class="letra-h-contact pdt-2">Contact Us</h2>
@@ -372,6 +375,7 @@
 			</div>
 		</div>
 	</section>
+	<!--***************************INICIO REDES SOCIALES****************************-->
 	<!--Follow us-->
 	<section>
 		<div class="container pd-5">
