--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 			</div>
 		</div>
 	</section>
-	<!--***************************INICIO REDES SOCIALES****************************-->
+	<!--***************************INICIO REDES SOCIALES version final****************************-->
 	<!--Follow us-->
 	<section>
 		<div class="container pd-5">
