Trabajé con Home y Features

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Primes</title>
-
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/common.css">
-
+  <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
+  <link rel="stylesheet" type="text/css" href="css/grid-system.css">
+  <link rel="stylesheet" type="text/css" href="css/utilities.css">
 </head>
 <body>
-	<header><!-- inicia Header -->
-		<div class="container-fluid fondoinicio">		
+	<header class="fondoinicio"><!-- inicia Header -->
+		<div class="container-fluid fondooscuro">		
 			<div class="row">
-				<div class="col-">
-					<p>Aquí va la imagen de EstrellaPrimes</p>
+				<div class="col-3">
+					<p class="star"><i class="icon ion-ios-star-half star"></i></p>
+					<p class="star" id="home">PRIMES</p>
 				</div>
-				<div class="col-10">
+				<div class="col-9">
 					<nav><!-- inicia Menú -->
 						<ul>
 							<li class="f-40"><a href="#home">Home</a></li>
@@ -32,51 +34,117 @@
 			</div>
 			<div class="row">
 				<div class="col-12">
-					<h1 class="f-60">Launch Your Business with Primes</h1>
+					<h1>Launch Your <strong>Business</strong> with <strong>Primes</strong></h1>
 					<p class="lema">Vivamus commmodo felis quis dui pharetra, ac venenatis magna lacinia. Vestibulum quis dignissim nibh. Duis vitae felis<br>orci.</p>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" id="margentopbotones">
 				<div class="col-6">
-					<button class="button text-white pull-left">Our Portfolio</button>					
+					<button class="button text-white pull-right">Our Portfolio</button>					
 				</div>
 				<div class="col-6"></div>
-					<button class="button text-white pull-right">Learn More</button>
+					<button class="button text-white pull-left">Learn More</button>
 				</div>
 			</div>
 		</div>	
 	</header><!-- termina Header -->
-	<section>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-5 lateralizq">
-					<p>Lorem Ipsum</p>
-					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+	<section class="margtop"><!--inicia sección de 6 cuadros chicos-->
+		<div class="container text-center">
+			<div class="row filadetres">
+				<div class="col-4">
+					<p><i class="icon ion-map iconogrande"></i></p>
+					<h3>Lorem Ipsum</h3>
+					<p class="text-gray">Ut lobortis auctor est, quis ornare orci<br>trsitique vel. Pellentesque sit amet<br>ultricies nisl. Ut aliquet dolor mi, vitae<br>varius felis elementum.</p>
 				</div>
-				<div class="col-2 centro">
-					<p>Lorem Ipsum</p>
-					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				<div class="col-4">
+					<p><i class="icon ion-paper-airplane iconogrande"></i></p>
+					<h3>Lorem Ipsum</h3>
+					<p class="text-gray text-center">Ut lobortis auctor est, quis ornare orci<br>trsitique vel. Pellentesque sit amet<br>ultricies nisl. Ut aliquet dolor mi, vitae<br>varius felis elementum.</p>
 				</div>
-				<div class="col-5 lateralder">
-					<p>Lorem Ipsum</p>
-					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				<div class="col-4">
+					<p><i class="icon ion-clipboard iconogrande"></i></p>
+					<h3>Lorem Ipsum</h3>
+					<p class="text-gray">Ut lobortis auctor est, quis ornare orci<br>trsitique vel. Pellentesque sit amet<br>ultricies nisl. Ut aliquet dolor mi, vitae<br>varius felis elementum.</p>
 				</div>			
 			</div>
-			<div class="row">
-				<div class="col-4 lateralizq">
-					<p>Lorem Ipsum</p>
-					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+			<div class="row filadetres">
+				<div class="col-4">
+					<p><i class="icon ion-earth iconogrande"></i></p>
+					<h3>Lorem Ipsum</h3>
+					<p class="text-gray">Ut lobortis auctor est, quis ornare orci<br>trsitique vel. Pellentesque sit amet<br>ultricies nisl. Ut aliquet dolor mi, vitae<br>varius felis elementum.</p>
 				</div>
-				<div class="col-4 centro">
-					<p>Lorem Ipsum</p>
-					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				<div class="col-4">
+					<p><i class="icon ion-flash-off iconogrande"></i></p>
+					<h3>Lorem Ipsum</h3>
+					<p class="text-gray">Ut lobortis auctor est, quis ornare orci<br>trsitique vel. Pellentesque sit amet<br>ultricies nisl. Ut aliquet dolor mi, vitae<br>varius felis elementum.</p>
 				</div>
-				<div class="col-4 lateralder">
-					<p>Lorem Ipsum</p>
-					<p>Ut lobortis auctor est, quis ornare orci trsitique vel. Pellentesque sit amet ultricies nisl. Ut aliquet dolor mi, vitae varius felis elementum.</p>
+				<div class="col-4">
+					<p><i class="icon ion-levels iconogrande"></i></p>
+					<h3>Lorem Ipsum</h3>
+					<p class="text-gray">Ut lobortis auctor est, quis ornare orci<br>trsitique vel. Pellentesque sit amet<br>ultricies nisl. Ut aliquet dolor mi, vitae<br>varius felis elementum.</p>
 				</div>			
 			</div>
 		</div>
-	</section>
+	</section><!--inicia sección de 6 cuadros chicos-->
+	<section id="features" class="fondomorefeatures"><!-- inicia fondo sección MORE FEATURES-->
+		<div class="container-fluid fondooscuro2">
+			<div class="row">
+				<div class="col-12"></div>
+				<h2 class="text-center">More features</h2>
+			</div>
+		</div>
+	</section><!-- termina fondo sección MORE FEATURES-->
+	<section><!-- inicia sección MORE FEATURES-->
+		<div class="container">
+			<div class="row margenes"><!-- inicia primer renglón MORE FEATURES-->
+				<div class="col-1 text-right">
+					<p><i class="icon ion-erlenmeyer-flask iconochico"></i></p>
+				</div>	
+				<div class="col-5">
+					<h4>Lorem Ipsum</h4>
+					<p class="text-gray">Nulla fringilla dapibus nisieu accumsan arcu covallis tincidunt donec mauris libero laciniade mollis malesuade ofio interdum. Integer sed magna vel velit dignissim luctus eu in urna.Dapibus egestas turpis. Praesent faucibus nisl sit amet nulla sollicitudin.</p>
+				</div>
+				<div class="col-1 text-right">
+					 <p><i class="icon ion-ios-speedometer iconochico"></i></p>
+				</div>
+					<div class="col-5">
+					<h4>Lorem Ipsum</h4>
+					<p class="text-gray">Nulla fringilla dapibus nisieu accumsan arcu covallis tincidunt donec mauris libero laciniade mollis malesuade ofio interdum. Integer sed magna vel velit dignissim luctus eu in urna.Dapibus egestas turpis. Praesent faucibus nisl sit amet nulla sollicitudin.</p>
+				</div>
+			</div><!-- termina primer renglón MORE FEATURES-->
+			<div class="row margenes"><!-- inicia segundo renglón MORE FEATURES-->
+				<div class="col-1 text-right">
+					<p><i class="icon ion-android-boat iconochico"></i></p>
+				</div>	
+				<div class="col-5">
+					<h4>Lorem Ipsum</h4>
+					<p class="text-gray">Nulla fringilla dapibus nisieu accumsan arcu covallis tincidunt donec mauris libero laciniade mollis malesuade ofio interdum. Integer sed magna vel velit dignissim luctus eu in urna.Dapibus egestas turpis. Praesent faucibus nisl sit amet nulla sollicitudin.</p>
+				</div>
+				<div class="col-1 text-right">
+					 <p><i class="icon ion-ios-pie iconochico"></i></p>
+				</div>
+					<div class="col-5">
+					<h4>Lorem Ipsum</h4>
+					<p class="text-gray">Nulla fringilla dapibus nisieu accumsan arcu covallis tincidunt donec mauris libero laciniade mollis malesuade ofio interdum. Integer sed magna vel velit dignissim luctus eu in urna.Dapibus egestas turpis. Praesent faucibus nisl sit amet nulla sollicitudin.</p>
+				</div>
+			</div><!-- termina segundo renglón MORE FEATURES-->
+			<div class="row margenes"><!-- inicia tercer renglón MORE FEATURES-->
+				<div class="col-1 text-right">
+					<p><i class="icon ion-android-archive iconochico"></i></p>
+				</div>	
+				<div class="col-5">
+					<h4>Lorem Ipsum</h4>
+					<p class="text-gray">Nulla fringilla dapibus nisieu accumsan arcu covallis tincidunt donec mauris libero laciniade mollis malesuade ofio interdum. Integer sed magna vel velit dignissim luctus eu in urna.Dapibus egestas turpis. Praesent faucibus nisl sit amet nulla sollicitudin.</p>
+				</div>
+				<div class="col-1 text-right">
+					 <p><i class="icon ion-trophy iconochico"></i></p>
+				</div>
+					<div class="col-5">
+					<h4>Lorem Ipsum</h4>
+					<p class="text-gray">Nulla fringilla dapibus nisieu accumsan arcu covallis tincidunt donec mauris libero laciniade mollis malesuade ofio interdum. Integer sed magna vel velit dignissim luctus eu in urna.Dapibus egestas turpis. Praesent faucibus nisl sit amet nulla sollicitudin.</p>
+				</div>
+			</div><!-- termina tercer renglón MORE FEATURES-->
+		</div>
+	</section><!-- termina sección MORE FEATURES-->
 </body>
 </html>
